fix: (28.02.20) Removed status list padding on mobile devices

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -433,8 +433,8 @@ p
   
 .status-list-card
   border-radius: 0px !important
-  @media screen and ( max-width: 960px)
-    margin: 0 -14px
+  /*@media screen and ( max-width: 960px)
+    margin: 0 -14px*/
 
 .status-header
   display: flex
